tests/parsing/smtlib/v2.6/errors/012_forall_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/012_forall_unclosed_2.smt2", line 2, character 28-39:
2 | (assert (forall ((x int)) x agalaglagla))
                                ^^^^^^^^^^^
Error while parsing a term, read the symbol 'agalaglagla',
      but expected a closing parenthesis to end the universally quantified
      formula.
